clang/test/BSC/Negative/Generic/SymbolBeforeTemplate/symbol_do_not_crash5.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

// TODO: improve the error message
**t<int N,>();
// expected-error@-1{{expected template parameter}}
// expected-warning@-2{{type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int}}
